# ai_knowledge_assistant

./: .dockerignore  .env.example  .gitignore  AUDIO_ARCHITECTURE_ANALYSIS.md  AUDIO_QUALITY_FIX.md  AUDIO_RECORDING_GUIDE.md  AUDIO_RECORDING_IMPLEMENTATION.md  AUDIO_REFACTOR_COMPLETE.md  CODE_CLEANUP_SUMMARY.md  CRITICAL_BUG_FIXED.md  DEBUGGING_NEXT_STEPS.md  DEEPGRAM_BIDIRECTIONAL_INTEGRATION.md  DEEPGRAM_INTEGRATION_STEPS.md  DEEPGRAM_SETUP.md  DEEPGRAM_STREAMING.md  DEMO_GUIDE.md  DUAL_WAV_RECORDING_IMPLEMENTATION.md  Dockerfile  FINAL_FIX_FOR_SOLUTIONS.md  FIX_COMPLETE_SUMMARY.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_INTEGRATION_GUIDE.md  HOW_TO_ACCESS_DEMO.md  HOW_TO_LAUNCH.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INTEGRATED_INTERFACE_GUIDE.md  INTEGRATION_COMPLETE.md  INTERIM_RESULTS_FEATURE.md  LANGUAGE_CONFIG.md  LANGUAGE_SELECTOR_ADDED.md  LICENSE  MULTILANGUAGE_FEATURE_COMPLETE.md  MVP_DEMO_README.md  Makefile  NGROK_GUIDE.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.md  README.md  README.old.md  (+57 more)
.claude/: settings.local.json
Docker/: Dockerfile  clean_requirements.txt  docker-compose.yml
alembic/: env.py
alembic/versions/: 20250128_0001_add_multitenancy.py  20250129_0002_add_super_admin_support.py  20250129_0003_add_invitations.py  (+9 more)
app/: __init__.py  init_realtime_system.py
docs/: Presentation.html  lending2.html
examples/: test_realtime_flow.py
scripts/: create_super_admin.py  migrate_to_multitenancy.py  promote_super_admin.py  setup_test_integration.py  test_integration_webhooks.py
tests/: test_integrations.py
(+154 files in other folders)
